home filter spacing issue

--- a/src/containers/PageBuilder/SectionBuilder/SectionColumns/SectionColumns.module.css
+++ b/src/containers/PageBuilder/SectionBuilder/SectionColumns/SectionColumns.module.css
@@ -389,6 +389,7 @@
             &:nth-child(2) {
               display: flex;
               gap: 10px;
+              height: auto;
               padding-bottom: 10px;
 
               & button {
